# emlgrad

./: .gitignore  AGENTS.md  README.md  demo.ipynb  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  lowering.md
emlgrad/: __init__.py  engine.py  nn.py
tests/: test_engine.py
