[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emlgrad"
version = "0.1.0"
description = "A tiny micrograd-style scalar autograd engine built from eml(x, y) = exp(x) - ln(y)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]
